force-app/main/default/objects/BMCServiceDesk__SYSknowSearchField__c/BMCServiceDesk__SYSknowSearchField__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data used to execute Global Search.</description>
    <label>Global Search</label>
    <nameField>
        <displayFormat>KS-{00000}</displayFormat>
        <label>SYSKSFieldsId</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SYSGlobalSearch</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>