force-app/main/default/objects/BMCServiceDesk__SYSknowSearchField__c/fields/BMCServiceDesk__DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__DisplayOrder__c</fullName>
    <description>The column position when search is displayed</description>
    <label>DisplayOrder</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>