force-app/main/default/objects/BMCServiceDesk__SYSknowSearchField__c/fields/BMCServiceDesk__IsSearchField__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__IsSearchField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSearchField</label>
    <type>Checkbox</type>
</CustomField>