force-app/main/default/objects/BMCServiceDesk__SYSknowSearchField__c/fields/BMCServiceDesk__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__ObjectName__c</fullName>
    <label>ObjectName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>