force-app/main/default/objects/BMCServiceDesk__SYSknowSearchField__c/listViews/BMCServiceDesk__All.listView-meta.xml
<ListView>
    <fullName>BMCServiceDesk__All</fullName>
    <columns>NAME</columns>
    <columns>BMCServiceDesk__ObjectName__c</columns>
    <columns>BMCServiceDesk__FieldName__c</columns>
    <columns>BMCServiceDesk__IsSearchField__c</columns>
    <columns>BMCServiceDesk__DisplayOrder__c</columns>
    <columns>BMCServiceDesk__Solution__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>